# pygame_wordle

./: .gitignore  LICENSE.md  README.md
pygame_wordle/: LICENSE  README.md  pyproject.toml
pygame_wordle/src/worddull/: color_palette.py  create_db.py  db_funcs.py  main.py
pygame_wordle/src/wordle/: color_palette.py  create_db.py  db_funcs.py  main.py
